--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Baloo+2:wght@400..800&family=Baloo+Bhai+2:wght@400..800&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Outfit:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 @import "tailwindcss";
 @import "tw-animate-css";
 
@@ -155,7 +156,7 @@
 }
 
 html , body {
-  font-family: monospace !important;
+  font-family: Roboto Mono !important;
   scrollbar-width: none;
   -ms-overflow-style: none;
 }
@@ -165,7 +166,7 @@ html , body {
 
 
 .description-container {
-  font-family: monospace !important;
+  font-family: Roboto Mono !important;
   color: #333;
   line-height: 1.6;
   padding: 1rem;
